plugins {
    id 'java'
    id 'application'
}

group = 'me.valizadeh.practices'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.14'
    implementation 'com.google.guava:guava:32.1.3-jre'
    
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    testImplementation 'org.mockito:mockito-core:5.7.0'
}

application {
    mainClass = 'me.valizadeh.practices.TradingSystemDemo'
}

tasks.named('test') {
    useJUnitPlatform()
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

run {
    jvmArgs += ['--enable-preview']
}
